--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
-
     implementation 'org.mapstruct:mapstruct:1.6.2'
     implementation 'org.liquibase:liquibase-core:4.29.2'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
@@ -48,6 +46,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.testcontainers:postgresql'
+    testImplementation 'org.testcontainers:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
